Refactored customer proto
